cluster/publicFacing/ricochet/ricochet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ricochet-deployment
  namespace: ricochet
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ricochet
  template:
    metadata:
      labels:
        app: ricochet
    spec:
      containers:
      - name: ricochet
        image: ghcr.io/caffeinatedope/ricochet-dev:latest@sha256:c07a598cfe2fe80a8685e5a4c28dcf091a18be921ef985df0c75cc137839f6bb # {"$imagepolicy": "ricochet:ricochet-imagepolicy"}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
        volumeMounts:
        - name: config-volume
          mountPath: /config
      volumes:
      - name: config-volume
        configMap:
          name: ricochet-configmap
