cluster/publicFacing/ricochet/ricochetingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ricochet-ingress
  namespace: ricochet
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`ricochet.caffeinatedope.net`)
    kind: Rule
    services:
    - name: ricochet-service
      port: 8081
  tls: 
    secretName: ricochet-cert
